# kalibr-books-publisher

./: .dockerignore  .env.example  .gitignore  Makefile  NOTICE  README.md  SOURCE-MANIFEST.sha256  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json  render.yaml  run.bat  stop.bat
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  docker-entrypoint.py  pyproject.toml
apps/api/src/kalibr_publisher/: __init__.py  boot_probe.py  main.py
apps/api/src/kalibr_publisher/api/: __init__.py  deps.py  router.py
apps/api/src/kalibr_publisher/api/routes/: __init__.py  automation.py  content_plan.py  health.py  posts.py  telegram.py  users.py
apps/api/src/kalibr_publisher/core/: __init__.py  config.py  errors.py  logging.py  middleware.py  runtime.py  security.py  store.py  users.py
apps/api/src/kalibr_publisher/integrations/: gemini.py  gemini_image.py  telegram.py
apps/api/src/kalibr_publisher/schemas/: health.py  posts.py  telegram.py  users.py
apps/api/src/kalibr_publisher/services/: automation.py  content_plan.py  document_parser.py  publisher.py  scheduler.py
apps/api/tests/: conftest.py  test_automation.py  test_config.py  test_coverage_extra.py  test_errors.py  test_gemini.py  test_health.py  test_posts_api.py  test_publisher.py  test_publisher_extra.py  test_scheduler.py  test_store.py  test_telegram.py  test_telegram_media.py
apps/web/: Dockerfile  copy-standalone.js  copy-standalone.mjs  next.config.ts  package.json  proxy.test.ts  proxy.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  not-found.tsx
apps/web/components/: app-shell.tsx  (+11 more)
docs/: api.md  architecture.md  code-review-phase-1.md  deployment.md  environment-variables.md  folder-structure.md  installation.md  local-development.md  phase-1.md  verification.md
infrastructure/caddy/: Caddyfile
(+15 files in other folders)
